# cutile-rs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: cargo-deny.yml  codeql.yml  pages.yml  pr.yml
cuda-async/: Cargo.toml  README.md
cuda-async/src/: device_box.rs  device_context.rs  device_future.rs  device_operation.rs  error.rs  launch.rs  lib.rs  scheduling_policies.rs
cuda-async/tests/: error_handling.rs
cuda-bindings/: Cargo.toml  README.md  build.rs  wrapper.h
cuda-bindings/src/: lib.rs
cuda-core/: Cargo.toml  README.md
cuda-core/src/: api.rs  cudarc_shim.rs  error.rs  lib.rs
cuda-tile-rs/: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
cuda-tile-rs/examples/: build_translate_basic.rs
cuda-tile-rs/src/: cuda_tile_c_bindings.rs  lib.rs  util.rs
cuda-tile-rs/tests/: ffi_smoke.rs
cutile/: ARCHITECTURE.md  Cargo.toml  README.md
cutile-benchmarks/: Cargo.toml  README.md  build.rs
cutile-benchmarks/benches/: execution_lock.rs  fmha.rs  fmha_causal.rs  gemm.rs  launch_overhead.rs  rmsnorm.rs  softmax.rs
cutile-benchmarks/scripts/: resetclock.sh  setclock.sh
cutile-benchmarks/src/: main.rs
cutile-book/: index.md
cutile-book/appendix/: syntax-reference.md
cutile-book/guide/: async-execution.md  debugging.md  dsl-api.md  execution-model.md  interoperability.md  introduction.md  performance-tuning.md
cutile-book/tutorials/: 04-matrix-multiplication.md  09-pointer-addition.md
cutile-compiler/: Cargo.toml  README.md
cutile-compiler/examples/: build_basic.rs
cutile-compiler/src/: ast.rs  bounds.rs  cuda_tile_runtime_utils.rs  dump.rs  error.rs  generics.rs  hints.rs  kernel_entry_generator.rs  lib.rs  specialization.rs  specialization_tests.rs  syn_utils.rs  train_map.rs  types.rs
cutile-compiler/src/compiler/: README.md  _function.rs  _module.rs  _type.rs  _value.rs  compile_assume.rs  compile_binary_op.rs  compile_block.rs  compile_cuda_tile_op.rs  compile_expression.rs  compile_inline.rs  compile_intrinsic.rs  compile_type.rs  mod.rs  optimization_hints.rs  shared_types.rs  shared_utils.rs  tile_rust_type.rs  utils.rs
cutile-compiler/tests/: compiler2_e2e.rs
cutile-examples/: Cargo.toml  README.md
cutile-examples/examples/: add_basic.rs  add_ptr.rs  async_add.rs  async_and_then_example.rs  async_device_op_example.rs  async_gemm.rs  async_mlp.rs  async_mlp_fused.rs  async_saxpy.rs  async_saxpy_unsafe.rs  batch_matmul.rs  dropout.rs  flash_attention.rs  flash_attention_causal.rs  gemm.rs  gemm_static.rs  hello_world.rs  inter_module.rs  interop.rs  rms_norm.rs  saxpy.rs  softmax.rs  tensor_permute.rs
cutile-examples/src/: lib.rs
cutile-ir/: Cargo.toml  README.md
cutile-ir/examples/: build_basic.rs
cutile-ir/src/: error.rs  lib.rs
cutile-ir/src/builder/: mod.rs
cutile-ir/src/bytecode/: decoder.rs  encoding.rs  enums.rs  mod.rs  op_writer.rs  opcode.rs  writer.rs
cutile-ir/src/ir/: attr.rs  block.rs  fmt.rs  location.rs  mod.rs  module.rs  op.rs  region.rs  types.rs  value.rs
cutile-ir/tests/: bytecode_compat.rs  bytecode_validate.rs  bytecode_version.rs  decode_rejection.rs  dominance.rs  per_op_roundtrip.rs
cutile-macro/: Cargo.toml  README.md
cutile-macro/src/: _module.rs  error.rs  kernel_launcher_generator.rs  lib.rs  rewrite_variadics.rs  types.rs  validate_dsl_syntax.rs
cutile/src/: _core.rs  api.rs  error.rs  lib.rs  prelude.rs  tensor.rs  tile_kernel.rs  utils.rs
cutile/src/kernels/: _conversion.rs  _creation.rs  mod.rs
cutile/tests/: basics_and_inlining.rs  binary_math_ops.rs  bitwise_and_bitcast_ops.rs  control_flow_ops.rs  element_type_zero.rs  element_type_zero_jit.rs  error_quality.rs  gpu.rs  gpu_execution_ops.rs  integer_ops.rs  memory_and_atomic_ops.rs  num_tiles_jit.rs  optimization_hints.rs  reduce_scan_ops.rs  slice_non_divisible.rs  span_source_location.rs  specialization_bits.rs  tensor_and_matrix_ops.rs  type_conversion_ops.rs  unary_math_ops.rs
cutile/tests/common/: mod.rs
cutile/tests/gpu/: error_quality.rs  num_tiles.rs
scripts/: run_all.sh  run_all_tests.sh  run_benchmarks.sh  run_cpu_tests.sh  run_examples.sh  run_gpu_tests.sh  test_benchmarks.sh  test_runner_common.sh
