[workspace]
resolver = "2"

members = [
    # CUDA C-API Bindings.
    "cuda-bindings",

    # Safe CUDA API. Uses cuda-bindings.
    "cuda-core",

    # Async CUDA API. Uses cuda-core.
    "cuda-async",

    # CUDA Tile MLIR dialect.
    "cuda-tile-rs",

    # cuTile Rust compiler. Requires cuda-tile-rs + cuda-async.
    "cutile-compiler",

    # cuTile Rust macros. Requires cutile-compiler.
    "cutile-macro",

    # Main package (cuTile Rust). Requires cuda-async + cutile-compiler + cutile-macro
    "cutile",

    # Examples and benchmarks.
    "cutile-examples",
    "cutile-benchmarks",
]

[workspace.package]
version = "0.0.1-alpha"
edition = "2021"
license = "Apache-2.0"
authors = ["Melih Elibol"]
repository = "https://github.com/nvlabs/cutile-rs"

[workspace.dependencies]
# ── Third-party ──────────────────────────────────────────────────────────────
melior = { version = "0.26", features = ["ods-dialects"] }
mlir-sys = { version = "210" }
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut", "fold"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1.0.35"
regex = "1.11.1"
uuid = { version = "1.17", features = ["v4"] }
prettyplease = "0.2.35"
half = { version = "2" }
itertools = "0.14.0"
num-traits = { version = "0" }
anyhow = "1"
stacker = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
candle-core = { version = "0.9.2", features = [] }
candle-nn = { version = "0.9.2", features = [] }
criterion = { version = "0.7", features = ["html_reports", "async_tokio", "csv_output"] }
trybuild = { version = "1.0.49", features = ["diff"] }
phf = { version = "0.11", features = ["macros"] }
convert_case = "0.8"

# ── Intra-workspace ──────────────────────────────────────────────────────────
cuda-bindings = { path = "cuda-bindings", version = "0.0.1-alpha" }
cuda-core = { path = "cuda-core", version = "0.0.1-alpha" }
cuda-async = { path = "cuda-async", version = "0.0.1-alpha" }
cuda-tile-rs = { path = "cuda-tile-rs", version = "0.0.1-alpha" }
cutile-compiler = { path = "cutile-compiler", version = "0.0.1-alpha" }
cutile-macro = { path = "cutile-macro", version = "0.0.1-alpha" }
cutile = { path = "cutile", version = "0.0.1-alpha" }
cutile-examples = { path = "cutile-examples", version = "0.0.1-alpha" }
cutile-benchmarks = { path = "cutile-benchmarks", version = "0.0.1-alpha" }
