[workspace]
resolver = "2"

members = [
    # CUDA C-API Bindings.
    "cuda-bindings",

    # Safe CUDA API. Uses cuda-bindings.
    "cuda-core",

    # Async CUDA API. Uses cuda-core.
    "cuda-async",

    # cuTile Rust compiler. Requires cutile-ir + cuda-async.
    "cutile-compiler",

    # cuTile Rust macros. Requires cutile-compiler.
    "cutile-macro",

    # Pure Rust Tile IR representation and bytecode writer.
    "cutile-ir",

    # Main package (cuTile Rust). Requires cuda-async + cutile-compiler + cutile-macro
    "cutile",

    # Examples and benchmarks.
    "cutile-examples",
    "cutile-benchmarks",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
authors = ["Melih Elibol"]
repository = "https://github.com/nvlabs/cutile-rs"

[workspace.dependencies]
# ── Third-party ──────────────────────────────────────────────────────────────
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut", "fold"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1.0.35"
regex = "1.11.1"
uuid = { version = "1.17", features = ["v4"] }
prettyplease = "0.2.35"
half = { version = "2" }
itertools = "0.14.0"
num-traits = { version = "0" }
anyhow = "1"
stacker = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
candle-core = { version = "0.9.2", features = [] }
candle-nn = { version = "0.9.2", features = [] }
criterion = { version = "0.7", features = ["html_reports", "async_tokio", "csv_output"] }
trybuild = { version = "1.0.49", features = ["diff"] }
phf = { version = "0.11", features = ["macros"] }
convert_case = "0.8"

# ── Intra-workspace ──────────────────────────────────────────────────────────
cuda-bindings = { path = "cuda-bindings", version = "0.0.1" }
cuda-core = { path = "cuda-core", version = "0.0.1" }
cuda-async = { path = "cuda-async", version = "0.0.1" }
cutile-compiler = { path = "cutile-compiler", version = "0.0.1" }
cutile-macro = { path = "cutile-macro", version = "0.0.1" }
cutile = { path = "cutile", version = "0.0.1" }
cutile-examples = { path = "cutile-examples", version = "0.0.1" }
cutile-ir = { path = "cutile-ir", version = "0.0.1" }
cutile-benchmarks = { path = "cutile-benchmarks", version = "0.0.1" }
