[package]
name = "cuda-tile-rs"
version.workspace = true
authors = ["Jared Roesch", "Melih Elibol"]
description = "Idiomatic CUDA Tile MLIR dialect builder API."
edition = "2024"
license.workspace = true
repository.workspace = true
readme = "README.md"
exclude = [
    "cuda-tile/media",
]

[dependencies]
melior = { workspace = true }
mlir-sys = { workspace = true }

[build-dependencies]
cmake = "0.1"
cc = "1.2.49"
bindgen = "0.71.0"