[package]
name = "cutile-compiler"
description = "Crate for compiling kernels authored in cuTile Rust to executable kernels."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["mlir", "cutile", "compiler"]

[dependencies]
melior = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
prettyplease = { workspace = true }
half = { workspace = true }
mlir-sys = { workspace = true }
anyhow = { workspace = true }
stacker = { workspace = true }
cuda-tile-rs = { workspace = true }
cuda-core = { workspace = true }
cuda-async = { workspace = true }
