[package]
name = "cutile"
description = "cuTile Rust lets programmers safely author and execute tile kernels directly in Rust."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["mlir", "cutile", "cuda", "gpu", "async"]

[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
num-traits = { workspace = true }
half = { workspace = true }
anyhow = { workspace = true }
candle-core = { workspace = true }
cuda-core = { workspace = true }
cuda-async = { workspace = true }
cutile-compiler = { workspace = true }
cutile-macro = { workspace = true }
